[profile.release]
lto = true
codegen-units = 1

[workspace]
resolver = "2"
members = [
    "bench",
    "bench/report",
    "cli",
    #TODO: Fix me add those back to workspace.
    #"examples",
    #"integration",
    "sdk",
    "server",
    "tools"
]

[workspace.metadata.cargo-machete]
ignored = ["openssl"]
