[package]
name = "bench"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"

[dependencies]
async-trait = "0.1.85"
atomic-time = "0.1.5"
charming = "0.4.0"
chrono = "0.4.31"
clap = { version = "4.5.26", features = ["derive"] }
figlet-rs = "0.1.5"
futures = "0.3.31"
hostname = "0.4.0"
iggy = { path = "../sdk" }
iggy-benchmark-report = { path = "report" }
integration = { path = "../integration" }
nonzero_lit = "0.1.2"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.19"
tracing = { version = "0.1.41" }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
uuid = { version = "1.12.1", features = ["serde"] }

[[bin]]
name = "iggy-bench"
path = "src/main.rs"
