[package]
name = "bench"
version = "0.2.4"
edition = "2021"
license = "Apache-2.0"
# Due to dependency to integration, which has a dependency to server, setting
# mimalloc on server is also setting it on bench.

[dependencies]
async-trait = "0.1.86"
charming = "0.4.0"
chrono = "0.4.39"
clap = { version = "4.5.30", features = ["derive"] }
figlet-rs = "0.1.5"
flume = "0.11.1"
futures = "0.3.31"
governor = "0.8.0"
hostname = "0.4.0"
human-repr = "1.1.0"
iggy = { path = "../sdk" }
iggy-bench-report = { path = "report" }
integration = { path = "../integration" }
nonzero_lit = "0.1.2"
serde = { version = "1.0.218", features = ["derive"] }
sysinfo = "0.33.1"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
tracing = { version = "0.1.41" }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
uuid = { version = "1.14.0", features = ["serde"] }

[[bin]]
name = "iggy-bench"
path = "src/main.rs"
