[package]
name = "iggy-cli"
version = "0.5.12"
edition = "2021"
authors = ["bartosz.ciesla@gmail.com"]
repository = "https://github.com/iggy-rs/iggy"
homepage = "https://iggy.rs"
description = "Iggy is the persistent message streaming platform written in Rust, supporting QUIC, TCP and HTTP transport protocols, capable of processing millions of messages per second."
license = "MIT"
keywords = ["iggy", "cli", "messaging", "streaming"]

[dependencies]
ahash = { version = "0.8.11", features = ["serde"] }
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.16"
figlet-rs = "0.1.5"
iggy = { path = "../sdk", features = ["iggy-cli"], version = "0.6.12" }
keyring = "3.2.0"
passterm = "2.0.1"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17" }

[[bin]]
name = "iggy"
path = "src/main.rs"
