[package]
name = "iggy-cli"
version = "0.8.1"
edition = "2021"
authors = ["bartosz.ciesla@gmail.com"]
repository = "https://github.com/iggy-rs/iggy"
homepage = "https://iggy.rs"
description = "CLI for Iggy message streaming platform"
license = "MIT"
keywords = ["iggy", "cli", "messaging", "streaming"]
readme = "../README.md"

[features]
default = ["login-session"]
login-session = ["dep:keyring"]

[dependencies]
ahash = { version = "0.8.11", features = ["serde"] }
anyhow = "1.0.86"
clap = { version = "4.5.17", features = ["derive"] }
clap_complete = "4.5.26"
figlet-rs = "0.1.5"
iggy = { path = "../sdk", features = ["iggy-cli"], version = "0.6.19" }
keyring = { version = "3.2.0", features = ["sync-secret-service", "vendored"], optional = true }
passterm = "2.0.1"
thiserror = "1.0.61"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "env-filter"] }

[[bin]]
name = "iggy"
path = "src/main.rs"
