[package]
name = "iggy-cli"
version = "0.8.13"
edition = "2021"
authors = ["bartosz.ciesla@gmail.com"]
repository = "https://github.com/iggy-rs/iggy"
homepage = "https://iggy.rs"
description = "CLI for Iggy message streaming platform"
license = "Apache-2.0"
keywords = ["iggy", "cli", "messaging", "streaming"]
readme = "../README.md"

[features]
default = ["login-session"]
login-session = ["dep:keyring"]

[dependencies]
ahash = { version = "0.8.11", features = ["serde"] }
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive"] }
clap_complete = "4.5.46"
figlet-rs = "0.1.5"
iggy = { path = "../sdk", features = ["iggy-cli"], version = "0.6.202" }
keyring = { version = "3.6.1", features = [
    "sync-secret-service",
    "vendored",
], optional = true }
passterm = "=2.0.1"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
    "fmt",
    "env-filter",
] }

[[bin]]
name = "iggy"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
