[package]
name = "cmd"
version = "0.7.0"
edition = "2021"
authors = ["bartosz.ciesla@gmail.com"]
repository = "https://github.com/iggy-rs/iggy"

[dependencies]
iggy = { path = "../iggy", features = ["iggy-cmd"] }
clap = { version = "4.1.11", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
async-trait = "0.1.68"
anyhow = "1.0.75"
thiserror = "1.0.48"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17" }
tracing-appender = "0.2.2"
passterm = "2.0.1"

[[bin]]
name = "iggy"
path = "src/main.rs"
