[package]
name = "cmd"
version = "0.8.0"
edition = "2021"
authors = ["bartosz.ciesla@gmail.com"]
repository = "https://github.com/iggy-rs/iggy"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.68"
clap = { version = "4.1.11", features = ["derive"] }
iggy = { path = "../iggy", features = ["iggy-cmd"] }
keyring = "2.0.5"
passterm = "2.0.1"
thiserror = "1.0.48"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17" }

[[bin]]
name = "iggy"
path = "src/main.rs"
