[package]
name = "cmd"
version = "0.11.1"
edition = "2021"
authors = ["bartosz.ciesla@gmail.com"]
repository = "https://github.com/iggy-rs/iggy"
homepage = "https://iggy.rs"

[dependencies]
anyhow = "1.0.76"
async-trait = "0.1.75"
clap = { version = "4.1.11", features = ["derive"] }
clap_complete = "4.4.4"
figlet-rs = "0.1.5"
iggy = { path = "../iggy", features = ["iggy-cmd"] }
keyring = "2.0.5"
passterm = "2.0.1"
thiserror = "1.0.48"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17" }

[[bin]]
name = "iggy"
path = "src/main.rs"
