[package]
name = "iggy_examples"
version = "0.0.2"
edition = "2021"

[[example]]
name = "getting-started-consumer"
path = "src/getting-started/consumer/main.rs"

[[example]]
name = "getting-started-producer"
path = "src/getting-started/producer/main.rs"

[[example]]
name = "basic-consumer"
path = "src/basic/consumer/main.rs"

[[example]]
name = "basic-producer"
path = "src/basic/producer/main.rs"

[[example]]
name = "message-envelope-consumer"
path = "src/message-envelope/consumer/main.rs"

[[example]]
name = "message-envelope-producer"
path = "src/message-envelope/producer/main.rs"

[[example]]
name = "message-headers-consumer"
path = "src/message-headers/consumer/main.rs"

[[example]]
name = "message-headers-producer"
path = "src/message-headers/producer/main.rs"

[dependencies]
anyhow = "1.0.79"
bytes = "1.4.0"
clap = { version = "4.5.0", features = ["derive"] }
iggy = { path = "../sdk" }
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive", "rc"] }
serde_json = "1.0.113"
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["full"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16" }
