[package]
name = "iggy_examples"
version = "0.0.4"
edition = "2021"

[[example]]
name = "getting-started-consumer"
path = "src/getting-started/consumer/main.rs"

[[example]]
name = "getting-started-producer"
path = "src/getting-started/producer/main.rs"

[[example]]
name = "basic-consumer"
path = "src/basic/consumer/main.rs"

[[example]]
name = "basic-producer"
path = "src/basic/producer/main.rs"

[[example]]
name = "message-envelope-consumer"
path = "src/message-envelope/consumer/main.rs"

[[example]]
name = "message-envelope-producer"
path = "src/message-envelope/producer/main.rs"

[[example]]
name = "message-headers-consumer"
path = "src/message-headers/consumer/main.rs"

[[example]]
name = "message-headers-producer"
path = "src/message-headers/producer/main.rs"

[[example]]
name = "multi-tenant-consumer"
path = "src/multi-tenant/consumer/main.rs"

[[example]]
name = "multi-tenant-producer"
path = "src/multi-tenant/producer/main.rs"

[[example]]
name = "new-sdk-consumer"
path = "src/new-sdk/consumer/main.rs"

[[example]]
name = "new-sdk-producer"
path = "src/new-sdk/producer/main.rs"

[dependencies]
ahash = { version = "0.8.11", features = ["serde"] }
anyhow = "1.0.86"
bytes = "1.6.0"
clap = { version = "4.5.17", features = ["derive"] }
futures-util = "0.3.30"
iggy = { path = "../sdk" }
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["full"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
