[package]
name = "iggy"
version = "0.0.114"
description = "Iggy is the persistent message streaming platform written in Rust, supporting QUIC, TCP and HTTP transport protocols, capable of processing millions of messages per second."
edition = "2021"
license = "MIT"
keywords = ["iggy", "messaging", "streaming"]
categories = ["messaging", "streaming"]
homepage = "https://iggy.rs"
documentation = "https://docs.iggy.rs"
repository = "https://github.com/iggy-rs/iggy"
readme = "../README.md"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.75"
async-dropper = { version = "0.3.0", features = ["tokio", "simple"] }
async-trait = "0.1.68"
base64 = "0.21.2"
byte-unit = { version = "4.0.19", optional = true }
bytes = "1.4.0"
chrono = { version = "0.4.31" }
clap = { version = "4.1.11", features = ["derive"] }
comfy-table = { version = "7.0.1", optional = true }
crc32fast = "1.3.2"
flume = "0.11.0"
humantime = { version = "2.1.0", optional = true }
keyring = { version = "2.0.5", optional = true }
lazy_static = "1.4.0"
openssl = { version = "0.10.*", features = ["vendored"] }
quinn = "0.10.0"
regex = "1.9.1"
reqwest = { version = "0.11.18", features = ["json"] }
reqwest-middleware = "0.2.2"
reqwest-retry = "0.3.0"
rustls = { version = "0.21.1", features = ["dangerous_configuration", "quic"] }
serde = { version = "1.0.159", features = ["derive", "rc"] }
serde_json = "1.0.95"
serde_qs = "0.12.0"
serde_with = { version = "3.0.0", features = ["base64"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-rustls = "0.24.0"
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16" }

[build-dependencies]
convert_case = "0.6.0"
rmp-serde = "1.1.2"
serde = { version = "1.0.188", features = ["derive", "rc"] }
serde_derive = "1.0.188"
sled = "0.34.7"

[features]
default = []
iggy-cmd = ["dep:comfy-table", "dep:humantime", "dep:byte-unit", "dep:keyring"]
