[package]
name = "iggy"
version = "0.0.115"
description = "Iggy is the persistent message streaming platform written in Rust, supporting QUIC, TCP and HTTP transport protocols, capable of processing millions of messages per second."
edition = "2021"
license = "MIT"
keywords = ["iggy", "messaging", "streaming"]
categories = ["messaging", "streaming"]
homepage = "https://iggy.rs"
documentation = "https://docs.iggy.rs"
repository = "https://github.com/iggy-rs/iggy"
readme = "../README.md"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.75"
async-dropper = { version = "0.3.1", features = ["tokio", "simple"] }
async-trait = "0.1.74"
base64 = "0.21.5"
byte-unit = { version = "4.0.19", optional = true }
bytes = "1.5.0"
chrono = { version = "0.4.31" }
clap = { version = "4.4.7", features = ["derive"] }
comfy-table = { version = "7.1.0", optional = true }
crc32fast = "1.3.2"
flume = "0.11.0"
humantime = { version = "2.1.0", optional = true }
keyring = { version = "2.0.5", optional = true }
lazy_static = "1.4.0"
openssl = { version = "0.10.*", features = ["vendored"] }
quinn = "0.10.2"
regex = "1.10.2"
reqwest = { version = "0.11.*", features = ["json"] }
reqwest-middleware = "0.2.*"
reqwest-retry = "0.3.0"
rustls = { version = "0.21.*", features = ["dangerous_configuration", "quic"] }
serde = { version = "1.0.*", features = ["derive", "rc"] }
serde_json = "1.0.*"
serde_with = { version = "3.4.0", features = ["base64"] }
thiserror = "1.0.*"
tokio = { version = "1.33.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tracing = { version = "0.1.40" }

[build-dependencies]
convert_case = "0.6.0"
rmp-serde = "1.1.2"
serde = { version = "1.0.*", features = ["derive", "rc"] }
serde_derive = "1.0.*"

[features]
default = []
iggy-cmd = ["dep:comfy-table", "dep:humantime", "dep:byte-unit", "dep:keyring"]
