[package]
name = "integration"
version = "0.0.1"
edition = "2021"

[dependencies]
ahash = { version = "0.8.11", features = ["serde"] }
assert_cmd = "2.0.14"
async-trait = "0.1.82"
bytes = "1.6.0"
chrono = "0.4.38"
ctor = "0.2.8"
derive_more = "1.0.0"
env_logger = "0.11.5"
futures = "0.3.30"
humantime = "2.1.0"
iggy = { path = "../sdk", features = ["iggy-cli"] }
keyring = "3.2.1"
lazy_static = "1.5.0"
libc = "0.2.158"
log = "0.4.22"
predicates = "3.1.0"
regex = "1.10.4"
serial_test = "3.1.1"
server = { path = "../server" }
tempfile = "3.10.1"
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
uuid = { version = "1.1.0", features = ["v7", "fast-rng", "zerocopy"] }
xxhash-rust = { version = "0.8.12", features = ["xxh32"] }

# Some tests are failing in CI due to lack of IPv6 interfaces
# inside the docker containers. This is a temporary workaround (hopefully).
[features]
ci-qemu = []
