[package]
name = "integration"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
ahash = { version = "0.8.11", features = ["serde"] }
assert_cmd = "2.0.16"
async-trait = "0.1.85"
bytes = "1.9.0"
chrono = "0.4.39"
ctor = "0.2.9"
derive_more = "1.0.0"
env_logger = "0.11.6"
futures = "0.3.31"
humantime = "2.1.0"
iggy = { path = "../sdk", features = ["iggy-cli"] }
keyring = "3.6.1"
lazy_static = "1.5.0"
libc = "0.2.169"
log = "0.4.25"
predicates = "3.1.3"
regex = "1.11.1"
serial_test = "3.2.0"
server = { path = "../server" }
tempfile = "3.14.0"
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
uuid = { version = "1.11.0", features = ["v7", "fast-rng", "zerocopy"] }
xxhash-rust = { version = "0.8.15", features = ["xxh32"] }
zip = "2.2.2"

# Some tests are failing in CI due to lack of IPv6 interfaces
# inside the docker containers. This is a temporary workaround (hopefully).
[features]
ci-qemu = []
