[package]
name = "samples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sample-consumer"
path = "src/consumer/main.rs"

[[bin]]
name = "sample-producer"
path = "src/producer/main.rs"

[dependencies]
sdk = { path = "../sdk" }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
clap = { version = "4.1.11", features = ["derive"] }
tracing = { version = "0.1.37"}
tracing-subscriber = {version = "0.3.16"}
anyhow = "1.0.70"
bytes = "1.4.0"
rcgen = "0.10.0"
