[package]
name = "samples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sample-consumer"
path = "src/consumer/main.rs"

[[bin]]
name = "sample-producer"
path = "src/producer/main.rs"

[dependencies]
sdk = { path = "../sdk" }
clap = { version = "4.1.11", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.159", features = ["derive", "rc"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tracing = { version = "0.1.37"}
tracing-subscriber = {version = "0.3.16"}
anyhow = "1.0.70"
bytes = "1.4.0"
rcgen = "0.10.0"
