[package]
name = "samples"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "getting-started-consumer-sample"
path = "src/getting-started/consumer/main.rs"

[[bin]]
name = "getting-started-producer-sample"
path = "src/getting-started/producer/main.rs"

[[bin]]
name = "basic-consumer-sample"
path = "src/basic/consumer/main.rs"

[[bin]]
name = "basic-producer-sample"
path = "src/basic/producer/main.rs"

[[bin]]
name = "advanced-consumer-sample"
path = "src/advanced/consumer/main.rs"

[[bin]]
name = "advanced-producer-sample"
path = "src/advanced/producer/main.rs"

[dependencies]
iggy = { path = "../iggy" }
clap = { version = "4.1.11", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.159", features = ["derive", "rc"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tracing = { version = "0.1.37"}
tracing-subscriber = {version = "0.3.16"}
anyhow = "1.0.70"
bytes = "1.4.0"
rcgen = "0.11.1"
