[package]
name = "iggy"
version = "0.6.203"
description = "Iggy is the persistent message streaming platform written in Rust, supporting QUIC, TCP and HTTP transport protocols, capable of processing millions of messages per second."
edition = "2021"
license = "Apache-2.0"
keywords = ["iggy", "messaging", "streaming"]
categories = ["command-line-utilities", "database", "network-programming"]
homepage = "https://iggy.rs"
documentation = "https://docs.iggy.rs"
repository = "https://github.com/iggy-rs/iggy"
readme = "../README.md"

[dependencies]
aes-gcm = "0.10.3"
ahash = { version = "0.8.11", features = ["serde"] }
anyhow = "1.0.96"
async-broadcast = { version = "0.7.2" }
async-dropper = { version = "0.3.1", features = ["tokio", "simple"] }
async-trait = "0.1.86"
base64 = "0.22.1"
bon = { version = "3.3" }
byte-unit = { version = "5.1.6", default-features = false, features = [
    "serde",
    "byte",
    "std",
] }
bytes = "1.10.0"
chrono = { version = "0.4.39" }
clap = { version = "4.5.30", features = ["derive"] }
comfy-table = { version = "7.1.4", optional = true }
crc32fast = "1.4.2"
dashmap = "6.1.0"
derive_more = { version = "2.0.1", features = ["full"] }
dirs = "6.0.0"
fast-async-mutex = { version = "0.6.7", optional = true }
flume = "0.11.1"
futures = "0.3.31"
futures-util = "0.3.31"
humantime = "2.1.0"
keyring = { version = "3.6.1", optional = true, features = [
    "sync-secret-service",
    "vendored",
] }
passterm = { version = "=2.0.1", optional = true }
quinn = { version = "0.11.6" }
reqwest = { version = "0.12.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
reqwest-middleware = { version = "0.4.1", features = ["json"] }
reqwest-retry = "0.7.0"
rustls = { version = "0.23.23", features = ["ring"] }
serde = { version = "1.0.218", features = ["derive", "rc"] }
serde_json = "1.0.139"
serde_with = { version = "3.12.0", features = ["base64"] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-rustls = { version = "0.26.1" }
toml = "0.8.20"
tracing = { version = "0.1.41" }
trait-variant = { version = "0.1.2" }
uuid = { version = "1.14.0", features = ["v7", "fast-rng", "zerocopy"] }
webpki-roots = { version = "0.26.8" }

[build-dependencies]
convert_case = "0.7.1"
serde = { version = "1.0.218", features = ["derive", "rc"] }
serde_derive = "1.0.218"

[features]
default = ["tokio_lock"]
iggy-cli = ["dep:comfy-table", "dep:keyring", "dep:passterm"]
tokio_lock = []
fast_async_lock = ["dep:fast-async-mutex"]
