[package]
name = "server"
version = "0.4.60"
edition = "2021"
build = "src/build.rs"

[features]
default = []
jemalloc = ["dep:tikv-jemallocator"]
tokio-console = ["dep:console-subscriber", "tokio/tracing"]

[dependencies]
ahash = { version = "0.8.11" }
anyhow = "1.0.86"
async-stream = "0.3.5"
async-trait = "0.1.82"
atone = "0.3.7"
axum = "0.7.5"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
bcrypt = "0.15.1"
bincode = "1.3.3"
blake3 = "1.5.4"
bytes = "1.6.0"
clap = { version = "4.5.17", features = ["derive"] }
console-subscriber = { version = "0.4.0", optional = true }
dashmap = "6.0.1"
derive_more = "1.0.0"
figlet-rs = "0.1.5"
figment = { version = "0.10.18", features = ["json", "toml", "env"] }
flume = "0.11.0"
futures = "0.3.30"
iggy = { path = "../sdk" }
jsonwebtoken = "9.3.0"
log = "0.4.20"
moka = { version = "0.12.5", features = ["future"] }
openssl = { version = "0.10.66", features = ["vendored"] }
opentelemetry = { version = "0.26.0", features = ["trace", "logs"] }
opentelemetry-appender-tracing = { version = "0.26.0", features = ["log"] }
opentelemetry-otlp = { version = "0.26.0", features = ["logs", "trace", "grpc-tonic", "http", "http-proto", "reqwest-client", "tokio"] }
opentelemetry-semantic-conventions = { version = "0.26.0" }
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio", "logs", "trace", "tokio"] }
prometheus-client = "0.22.2"
quinn = { version = "0.11.5" }
rcgen = "0.13.1"
reqwest = { version = "0.12.4", features = ["rustls-tls", "rustls-tls-no-provider"] }
ring = "0.17.8"
rmp-serde = "1.3.0"
rust-s3 = { version = "0.34.0", features = ["default"] }
rustls = { version = "0.23.10" }
rustls-pemfile = "2.1.2"
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = "1.0.127"
serde_with = { version = "3.8.1", features = ["base64", "macros"] }
sled = "0.34.7"
static-toml = "1.2.0"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.2", features = ["derive"] }
sysinfo = "0.32.0"
thiserror = "1.0.61"
tokio = { version = "1.40.0", features = ["full"] }
tokio-native-tls = "0.3.1"
toml = "0.8.14"
tower-http = { version = "0.6.1", features = [
    "add-extension",
    "cors",
    "trace",
] }
tracing = { version = "0.1.40" }
tracing-appender = "0.2.3"
tracing-opentelemetry = { version = "0.27.0" }
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
ulid = "1.1.2"
uuid = { version = "1.1.0", features = ["v7", "fast-rng", "zerocopy"] }
xxhash-rust = { version = "0.8.12", features = ["xxh32"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[build-dependencies]
figment = { version = "0.10.18", features = ["json", "toml", "env"] }
serde_json = "1.0.127"
vergen-git2 = { version = "1.0.0", features = ["build",
    "cargo",
    "rustc",
    "si"
] }

[[bin]]
name = "iggy-server"
path = "src/main.rs"

# This is a workaround for cargo-udeps to ignore these dependencies
# in case if feature 'tokio-console' is enabled.
[package.metadata.cargo-udeps.ignore]
normal = ["tracing-appender", "strip-ansi-escapes"]

[package.metadata.cargo-machete]
ignored = ["rust-s3"]
